--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy==1.19.5
-GPy==1.9.9
-scikit-learn==0.22.1
-scikit-optimize==0.8.1
-scipy==1.4.1
-dill==0.3.3
+numpy
+GPy
+scikit-learn
+scikit-optimize
+scipy
+dill
